--- a/client/src/app/core/navigation/navigation.component.scss
+++ b/client/src/app/core/navigation/navigation.component.scss
@@ -10,30 +10,24 @@ svg {
   height: 100%;
 }
 
-mat-toolbar {
+.header-toolbar {
   justify-content: space-between;
   height: 74px;
 }
 
-mat-nav-list {
+.nav {
   margin-left: 30px;
-  [mat-list-item] {
+  .nav-link {
     display: inline-block;
     width: fit-content;
     block-size: fit-content;
-    margin: 10px;
-    margin-bottom: 0px;
-    line-height: 48px;
-    border-radius: 4px;
-    text-align: center;
-    &::before {
-      content: initial;
-    }
+    
+    margin: 5px 5px 0 5px;
+
+    line-height: 40px;
   }
-  .mat-list-item-title {
-    font-size: 1rem;
-  }
-  &.nav-right {
-    justify-self: flex-end;
+
+  .nav-link-title {
+    padding: 0 10px;
   }
 }
