added font awesome icons, added footer and changed header

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,14 @@
-<app-navigation></app-navigation>
-<router-outlet></router-outlet>
+<div class="main-wrapper">
+  <header>
+    <app-navigation></app-navigation>
+  </header>
+
+  <mat-sidenav-container class="main-content">
+      <router-outlet></router-outlet>
+      <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda est tenetur dolor minima exercitationem vitae iusto soluta facere facilis ullam! Accusamus, consequatur. Aliquid, tempore quibusdam, animi repellendus pariatur veniam facere cupiditate unde, illum eos ab deleniti dolorum nihil in provident libero earum sed eligendi aperiam dignissimos dolore maiores labore eum? Quibusdam earum similique fugiat a, enim voluptatem accusantium corporis ullam labore delectus nobis expedita, quisquam autem nemo voluptate, sapiente optio deleniti doloremque rerum architecto recusandae nihil numquam dicta. Quis, itaque corrupti porro unde odio reprehenderit. Id architecto tenetur sit, magni in illo, temporibus dolores odio incidunt necessitatibus unde nesciunt! Soluta assumenda nostrum nulla neque, ex tempore repudiandae laboriosam magni quam maiores maxime praesentium quisquam, eum reprehenderit dolor vel porro voluptas ratione mollitia quibusdam deleniti quis ducimus quidem. Molestiae placeat ratione adipisci voluptatibus qui harum explicabo esse mollitia vero? Excepturi ad odit unde consequatur officiis sequi itaque! Explicabo architecto laborum, ipsam praesentium culpa officiis dolorum excepturi temporibus veritatis cum vel voluptas vitae dolor corporis sequi enim harum iste. Soluta, quia iste sunt amet est libero dolor iure illo, reiciendis ad dolores praesentium perspiciatis earum dolore neque consequatur? Consequatur natus, culpa neque tenetur ipsam, deleniti quibusdam atque ducimus voluptatum repudiandae dignissimos fuga!</p> -->
+  </mat-sidenav-container>
+
+  <footer>
+    <app-footer></app-footer>
+  </footer>
+</div>
