--- a/client/src/app/core/navigation/navigation.component.scss
+++ b/client/src/app/core/navigation/navigation.component.scss
@@ -1,29 +1,34 @@
-svg {
-  width: 200px;
-  font-size: 0;
+.header-toolbar {
+  height: 74px;
 }
 
 .logo {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
+  flex: 0 0 400px;
+
+  svg {
+    width: 200px;
+    font-size: 0;
+  }
 }
 
-.header-toolbar {
-  justify-content: space-between;
-  height: 74px;
+.nav-middle {
+  display: flex;
+  justify-content: center;
+  flex: 1 1 auto;
+}
+
+.nav-right {
+  display: flex;
+  justify-content: flex-end;
+  flex: 0 0 400px;
 }
 
 .nav {
-  margin-left: 30px;
   .nav-link {
-    display: inline-block;
-    width: fit-content;
-    block-size: fit-content;
-    
-    margin: 5px 5px 0 5px;
-
+    margin: 5px 3px 0 3px;
     line-height: 40px;
   }
 
