--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,6 +7,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: overlay;
 }
 
 html {
@@ -35,4 +36,24 @@ img {
 a {
   user-drag: none;
   -webkit-user-drag: none;
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  height: 56px;
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: hsl(0, 0%, 60%);
+  &:hover {
+    background-color: hsl(0, 0%, 70%);
+
+  }
 }
