--- a/client/src/app/core/components/navigation/navigation.component.html
+++ b/client/src/app/core/components/navigation/navigation.component.html
@@ -7,17 +7,11 @@
     <a mat-button routerLink="/" class="nav-link">
       <span matListItemTitle class="nav-link-title">Home</span>
     </a>
-    <a mat-button routerLink="/" class="nav-link">
+    <a mat-button routerLink="/articles" class="nav-link">
       <span matListItemTitle class="nav-link-title">Catalog</span>
     </a>
     <a mat-button routerLink="/" class="nav-link">
       <span matListItemTitle class="nav-link-title">My Articles</span>
-    </a>
-    <a mat-button routerLink="/" class="nav-link">
-      <span matListItemTitle class="nav-link-title">Home</span>
-    </a>
-    <a mat-button routerLink="/" class="nav-link">
-      <span matListItemTitle class="nav-link-title">Home</span>
     </a>
   </mat-nav-list>
 
