--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&display=swap");
+
 html,
 body {
   height: 100%;
@@ -6,7 +8,8 @@ body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding: 0;
+  font-family: "Roboto", "Helvetica Neue", sans-serif;
   overflow: overlay;
 }
 
@@ -56,4 +59,10 @@ a {
     background-color: hsl(0, 0%, 70%);
 
   }
+}
+
+.mat-drawer-container.mat-sidenav-container.main-content,
+.mat-drawer-content.mat-sidenav-content,
+.mat-drawer-backdrop {
+  height: 100%;
 }
