--- a/client/src/app/articles/article-list/article-list.component.html
+++ b/client/src/app/articles/article-list/article-list.component.html
@@ -1,10 +1,9 @@
 <app-page-title text="Articles"></app-page-title>
 
 <div class="container">
-  <mat-grid-list cols="3" gutterSize="35" rowHeight="560">
-    <mat-grid-tile><app-article-card></app-article-card></mat-grid-tile>
-    <mat-grid-tile><app-article-card></app-article-card></mat-grid-tile>
-    <mat-grid-tile><app-article-card></app-article-card></mat-grid-tile>
-    <mat-grid-tile><app-article-card></app-article-card></mat-grid-tile>
+  <mat-grid-list cols="3" gutterSize="65" rowHeight="430">
+    <mat-grid-tile *ngFor="let article of articles$ | async">
+      <app-article-card [article]="article"></app-article-card>
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
