--- a/client/src/app/articles/article-card/article-card.component.html
+++ b/client/src/app/articles/article-card/article-card.component.html
@@ -5,7 +5,7 @@
     <mat-card-subtitle>Author/User</mat-card-subtitle>
   </mat-card-header>
   <a routerLink="/">
-    <div class="card-image" [style]="getImageStylings()"  alt="Photo of a Shiba Inu"></div>
+    <div class="card-image" [style]="cardImageStyle" alt="Photo of a Shiba Inu"></div>
     <mat-card-content class="card-content">
       <p>
         {{article.title}}
