--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -65,7 +65,7 @@
   </mat-form-field>
 
   <div class="submit-btns">
-    <button mat-flat-button>Cancel</button>
+    <button mat-flat-button type="button" (click)="cancelHandler()">Cancel</button>
     <button mat-flat-button color="primary">Register</button>
   </div>
 </form>
