add comment section

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,8 +4,10 @@
       <app-navigation></app-navigation>
     </header>
 
-    <mat-sidenav-container class="main-content">
-      <router-outlet></router-outlet>
+    <mat-sidenav-container>
+      <div class="main-content">
+        <router-outlet></router-outlet>
+      </div>
     </mat-sidenav-container>
 
     <footer>
