--- a/client/src/app/auth/register/register.component.scss
+++ b/client/src/app/auth/register/register.component.scss
@@ -36,7 +36,7 @@ mat-form-field {
   margin-bottom: 5px;
 }
 .register-failure {
-  color: red;
+  color: var(--mdc-theme-error, #f44336);
   margin-bottom: 5px;
 }
 
