--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -1,10 +1,13 @@
 .main-wrapper {
   height: 100%;
 }
-
-.main-content {
-  align-self: stretch;
-  justify-self: stretch;
-
+.custom-content-container {
+  justify-items: stretch;
+  align-items: stretch;
   flex-grow: 1;
 }
+
+.main-content {
+  min-height: 100vh;
+}
+
