--- a/client/src/app/articles/article-card/article-card.component.html
+++ b/client/src/app/articles/article-card/article-card.component.html
@@ -1,19 +1,15 @@
 <mat-card class="card">
   <mat-card-header class="card-header">
     <div mat-card-avatar class="card-author-avatar"></div>
-    <mat-card-title>{{article.user.username}}</mat-card-title>
-    <mat-card-subtitle>Author/User</mat-card-subtitle>
+    <mat-card-title class="card-title">{{article.title}}</mat-card-title>
+    <mat-card-subtitle class="card-author">Author/User</mat-card-subtitle>
   </mat-card-header>
-  <a routerLink="/">
+  <a [routerLink]="'/articles/' + article._id">
     <div class="card-image" [style]="cardImageStyle" alt="Photo of a Shiba Inu"></div>
-    <mat-card-content class="card-content">
-      <p>
-        {{article.title}}
-      </p>
-    </mat-card-content>
+    <mat-card-content class="card-content">{{article.summary}}</mat-card-content>
   </a>
   <mat-card-actions class="card-actions">
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-button>EDIT</button>
+    <button mat-button>DELETE</button>
   </mat-card-actions>
 </mat-card>
