--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <form class="form" [formGroup]="loginForm" (ngSubmit)="loginHandler()">
-  <h2 class="form-title">Register</h2>
+  <h2 class="form-title">Login</h2>
   <div class="hint">* required fields</div>
   <div class="login-failure" *ngIf="loginFailure$ | async">{{loginFailure$ | async}}</div>
 
