--- a/client/src/app/articles/article-list/article-list.component.scss
+++ b/client/src/app/articles/article-list/article-list.component.scss
@@ -9,3 +9,10 @@ ul {
   justify-content: space-around;
   gap: 20px;
 }
+
+.spinner {
+  min-height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
