--- a/client/src/app/auth/login/login.component.scss
+++ b/client/src/app/auth/login/login.component.scss
@@ -41,3 +41,9 @@ mat-form-field {
     margin-right: 12px;
   }
 }
+.spinner-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
