--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,4 +1,7 @@
-<form class="form" [formGroup]="registerForm" (ngSubmit)="registerHandler()">
+<div class="spinner-container" *ngIf="isRegistering$ | async">
+  <app-spinner></app-spinner>
+</div>
+<form class="form" [formGroup]="registerForm" (ngSubmit)="registerHandler()" *ngIf="!(isRegistering$ | async)">
   <h2 class="form-title">Register</h2>
   <div class="hint">* required fields</div>
   <div class="register-failure" *ngIf="registerFailure$ | async">{{registerFailure$ | async}}</div>
