--- a/client/src/app/auth/register/register.component.scss
+++ b/client/src/app/auth/register/register.component.scss
@@ -52,3 +52,9 @@ mat-form-field {
     margin-right: 12px;
   }
 }
+.spinner-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
