--- a/client/src/app/shared/spinner/spinner.component.html
+++ b/client/src/app/shared/spinner/spinner.component.html
@@ -1,8 +1,4 @@
 <div class="spinner-container">
-  <mat-progress-spinner
-    class="example-margin"
-    [color]="color"
-    [mode]="mode"
-    [value]="value">
+  <mat-progress-spinner class="example-margin" [color]="color" [mode]="mode" [value]="value">
   </mat-progress-spinner>
 </div>
