--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
 <form *ngIf="!(isLoggingIn$ | async)" class="form" [formGroup]="loginForm" (ngSubmit)="loginHandler()">
   <h2 class="form-title">Login</h2>
   <div class="hint">* required fields</div>
-  <div class="login-failure" *ngIf="loginFailure$ | async">{{loginFailure$ | async}}</div>
+  <div class="login-failure" *ngIf="loginFailure">{{loginFailure}}</div>
 
   <mat-form-field>
     <mat-label>Email</mat-label>
