--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -3,8 +3,7 @@
 </div>
 <form class="form" [formGroup]="registerForm" (ngSubmit)="registerHandler()" *ngIf="!(isRegistering$ | async)">
   <h2 class="form-title">Register</h2>
-  <div class="hint">* required fields</div>
-  <div class="register-failure" *ngIf="registerFailure$ | async">{{registerFailure$ | async}}</div>
+  <div class="register-failure" *ngIf="registerFailure">{{registerFailure}}</div>
   <mat-form-field appearance="fill">
     <mat-label>Username</mat-label>
     <input matInput placeholder="CoolNickname123" formControlName="username" />
