--- a/client/src/app/core/components/navigation/navigation.component.html
+++ b/client/src/app/core/components/navigation/navigation.component.html
@@ -23,7 +23,7 @@
         <span matListItemTitle class="nav-link-title">Articles <fa-icon [icon]="arrowDownIcon"></fa-icon></span>
       </a>
       <mat-menu #menu="matMenu">
-        <a mat-menu-item routerLink="/my-articles" class="nav-link">
+        <a mat-menu-item routerLink="/articles/my-articles" class="nav-link">
           <span matListItemTitle class="nav-link-title">My Articles</span>
         </a>
         <a mat-menu-item routerLink="/articles/create" class="nav-link">
