--- a/client/src/app/articles/article-details/article-details.component.scss
+++ b/client/src/app/articles/article-details/article-details.component.scss
@@ -31,3 +31,21 @@
   justify-content: center;
   align-items: center;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+  opacity: 0.75;
+  margin-right: 10px;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+
+.actions {
+  margin-top: 10px;
+  display: flex;
+  justify-content: end;
+}
