--- a/client/src/app/core/components/navigation/navigation.component.html
+++ b/client/src/app/core/components/navigation/navigation.component.html
@@ -38,9 +38,9 @@
       <a mat-button routerLink="/auth/logout" class="nav-link">
         <span matListItemTitle class="nav-link-title">Logout</span>
       </a>
-      <a mat-button routerLink="/profile" class="nav-link">
+      <!-- <a mat-button routerLink="/profile" class="nav-link">
         <span matListItemTitle class="nav-link-title">Profile</span>
-      </a>
+      </a> -->
     </ng-template>
     <ng-template #loggedOutRightNav>
       <a mat-button routerLink="/auth/login" class="nav-link">
