--- a/client/src/app/core/components/home/home.component.html
+++ b/client/src/app/core/components/home/home.component.html
@@ -1,1 +1,5 @@
 <app-page-title text="Homepage"></app-page-title>
+<p class="info">
+  The web application is about an open media for posting articles. <br />
+  You can login, register, logout. <br />
+  There are pages with catalog for articles, article details page, create article, my-articles, delete articlee and edit article.<br /></p>
